Test of inreasing the lily-container to avoid clipping of images

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body, html {
 
 .lilies-container {
   position: relative;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
 }
 
 .lily {
